muster/deployment/production/deployment.yml
# kubetpl:syntax:$
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ersterstck-website
    component: cms
    created-by: gradlon
    instance: ersterstock-website-website-production
    managed-by: gradlon
    part-of: ersterstock-website
    port: "3000"
    role: backend
    traefik: enabled
    type: strapi
    version: $TAG
  name: ersterstck-website
  namespace: kulturverein-walzwerk
spec:
  progressDeadlineSeconds: 900
  replicas: 1
  selector:
    matchLabels:
      app: ersterstck-website
  template:
    metadata:
      labels:
        app: ersterstck-website
        component: cms
        created-by: gradlon
        instance: ersterstock-website-website-production
        managed-by: gradlon
        part-of: ersterstock-website
        port: "3000"
        role: backend
        traefik: enabled
        type: strapi
        version: $TAG
    spec:
      containers:
      - command:
        - node
        - index.js
        image: registry.integral-systems.ch/kulturverein-walzwerk/ersterstock-website:$TAG
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 60
        name: ersterstock-strapi-website
        ports:
        - containerPort: 3000
        readinessProbe:
          failureThreshold: 60
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          limits:
            cpu: 512m
            memory: 1280Mi
          requests:
            cpu: 50m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: true
      imagePullSecrets:
      - name: fx-docker-registry
      nodeSelector:
        class: core
      restartPolicy: Always
      securityContext:
        fsGroup: 777
        runAsGroup: 777
        runAsUser: 9988
---
apiVersion: v1
kind: Service
metadata:
  name: ersterstck-website-service
  namespace: kulturverein-walzwerk
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ersterstck-website
